syntax = "proto3";
option java_multiple_files = true;

package cn.iocoder.springcloud.labx30.userservice.api;

message UserGetRequest {
    int32 id = 1;
}

message UserGetResponse {
    int32 id = 1;
    string name = 2;
    int32 gender = 3;
}

message UserCreateRequest {
    string name = 1;
    int32 gender = 2;
}

message UserCreateResponse {
    int32 id = 1;
}

service UserService {

    rpc get(UserGetRequest) returns (UserGetResponse);

    rpc create(UserCreateRequest) returns (UserCreateResponse);

}
